FIX overflow-x issue

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,4 +21,5 @@ body {
   font-size: $font-text;
   line-height: 1.6;
   background-color: #fff;
+  overflow-x: hidden;
 }
